@@ -1,3 +1,11 @@
+2004-02-27  Rodney Dawes  <dobey@ximian.com>
+
+	* configure.in:
+	* libsoup/Makefile.am: Use a different variable for linking to the
+	static version of gnutls, so we don't pull the .a files into the .pc
+
+	Fixes #53346
+
 2004-02-20  Dan Winship  <danw@ximian.com>
 
 	* libsoup/soup-message-io.c (read_metadata, read_body_chunk,
